fix: double scrollbar

--- a/apps/gauzy/src/app/pages/approval-policy/approval-policy.component.scss
+++ b/apps/gauzy/src/app/pages/approval-policy/approval-policy.component.scss
@@ -1,4 +1,5 @@
 @import 'gauzy/_gauzy-table';
+@import 'gauzy/_gauzy-cards';
 
 .gauzy-button-container {
   align-self: flex-end;
@@ -8,4 +9,13 @@
   nb-card-body {
     background-color: rgba(50, 50, 50, 0.03);
   }
+  .custom-table {
+    height: calc(100vh - 27.5rem);
+  }
+
+  @include nb-card-overrides(
+    unset,
+    calc($default-card-height),
+    $default-radius
+  );
 }
